--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,27 +7,25 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-with-clang:
+  build:
     runs-on: ubuntu-latest
-    container: ghcr.io/mlv-wip/clang-builder:latest
+    strategy:
+      matrix:
+        compiler: [clang, gcc]
+        sanitizer-config:
+          - name: memsan
+            enable-flags: "--enable-asan --enable-lsan --enable-ubsan"
+            build-type: "memsan"
+          - name: threadsan
+            enable-flags: "--enable-tsan"
+            build-type: "threadsan"
+
+    container: ghcr.io/mlv-wip/${{ matrix.compiler }}-builder:latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make test
-      run: make test
-
-  build-with-gcc:
-    runs-on: ubuntu-latest
-    container: ghcr.io/mlv-wip/gcc-builder:latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
+    - name: configure (${{ matrix.sanitizer-config.name }})
+      run: ./configure ${{ matrix.sanitizer-config.enable-flags }} --enable-tests --enable-demo --build-type=${{ matrix.sanitizer-config.build-type }}
     - name: make
       run: make
     - name: make test
