--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,10 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.arch == 'arm64' && 'ubuntu-24.04-arm64' || 'ubuntu-latest' }}
+    #runs-on: ${{ matrix.arch == 'arm64' && 'ubuntu-24.04-arm64' || 'ubuntu-latest' }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [amd64, arm64]
+        #arch: [amd64, arm64]
+        arch: [amd64]
         compiler: [clang, gcc]
         sanitizer-config:
           - name: addrsan
